--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,47 @@
 @import './shared/shared.scss';
 
+.space-mobile-menu {
+    display: none;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 101;
+    backdrop-filter: blur(100px);
+    &__close {
+        margin: 24px 24px 0 auto;
+        cursor: pointer;
+    }
+    &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        &--link {
+            display: flex;
+            cursor: pointer;
+            .number {
+                font-size: 16px;
+                line-height: 16px;
+                font-weight: bold;
+                font-family: 'Barlow Condensed', sans-serif;
+                margin: 0 8px 0 0;
+                color: #FFF;
+            }
+            .text {
+                font-size: 16px;
+                line-height: 16px;
+                font-family: 'Barlow Condensed', sans-serif;
+                color: #FFF;
+                text-transform: uppercase;
+            }
+        }
+    }
+}
 .space {
     display: flex;
     flex-direction: column;
@@ -9,6 +51,7 @@
     height: 100vh;
     width: 100vw;
     font-family: 'Barlow Condensed', sans-serif;
+    overflow: hidden;
     &.destination {
         background: url('../assets/images/destination/background-destination-desktop.jpg');
         background-repeat: no-repeat;
@@ -26,84 +69,92 @@
     }
     &__header {
         display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        max-width: 1440px;
-        height: 100px;
-        width: 100%;
-        margin: 40px auto 0 auto;
-        &--logo {
+        position: fixed;
+        width: 100vw;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        &--container {
             display: flex;
-            width: 48px;
-            height: 48px;
             align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            background-color: $white;
-            margin: 0 64px 0 55px;
-        }
-        &--line {
-            display: flex;
-            height: 1px;
-            background-color: rgba(255, 255, 255, 0.25);
-            margin: 0 -32px 0 0;
-            width: 3;
-            z-index: 1;
+            justify-content: flex-end;
+            max-width: 1440px;
+            height: 100px;
             width: 100%;
-        }
-        &--glass {
-            display: flex;
-            box-sizing: border-box;
-            padding: 0 100px;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.15);
-            backdrop-filter: blur(5px);
-            .link {
-                cursor: pointer;
+            margin: 40px auto 0 auto;
+            .logo {
                 display: flex;
-                justify-content: center;
+                width: 48px;
+                height: 48px;
                 align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                background-color: $white;
+                margin: 0 64px 0 55px;
+            }
+            .line {
+                display: flex;
+                height: 1px;
+                background-color: rgba(255, 255, 255, 0.25);
+                margin: 0 -32px 0 0;
+                width: 3;
+                z-index: 1;
+                width: 100%;
+            }
+            .glass {
+                display: flex;
+                box-sizing: border-box;
+                padding: 0 100px;
                 height: 100%;
-                border-bottom: 3px solid transparent;
-                margin: 0 32px 0 0;
-                &:hover {
-                    border-color: rgba(255, 255, 255, 0.5);
-                }
-                &.active {
-                    border-color: $white;
-                }
-                &:last-child {
-                    margin: 0;
-                }
-                span {
-                    color: $white;
-                    letter-spacing: 2.7px;
-                }
-                &__number {
-                    font-size: 20px;
-                    line-height: 20px;
-                    font-weight: bold;
-                    margin: 0 8px 0 0;
-                }
-                &__text {
-                    font-size: 20px;
-                    line-height: 20px;
-                    text-transform: uppercase;
+                background-color: rgba(255, 255, 255, 0.15);
+                backdrop-filter: blur(5px);
+                &__link {
+                    cursor: pointer;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100%;
+                    border-bottom: 3px solid transparent;
+                    margin: 0 32px 0 0;
+                    &:hover {
+                        border-color: rgba(255, 255, 255, 0.5);
+                    }
+                    &.active {
+                        border-color: $white;
+                    }
+                    &:last-child {
+                        margin: 0;
+                    }
+                    span {
+                        color: $white;
+                        letter-spacing: 2.7px;
+                    }
+                    &--number {
+                        font-size: 20px;
+                        line-height: 20px;
+                        font-weight: bold;
+                        margin: 0 8px 0 0;
+                    }
+                    &--text {
+                        font-size: 20px;
+                        line-height: 20px;
+                        text-transform: uppercase;
+                    }
                 }
             }
-        }
-        &--menu {
-            display: none;
+            .menu {
+                display: none;
+            }
         }
     }
     &__content {
         display: flex;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         max-width: 1440px;
         margin: 0 auto;
         justify-content: center;
-        align-items: flex-end;
+        overflow-y: auto;
     }
 }
 
@@ -129,24 +180,27 @@
         }
         &__header {
             margin: 0;
-            &--logo {
-                margin: 0 auto 0 40px;
-            }
-            &--line {
-                display: none;
-            }
-            &--glass {
-                padding: 0 48px;
-                background-color: rgba(255, 255, 255, 0.08);
-                backdrop-filter: unset;
-                .link {
-                    span {
-                        font-size: 14px;
-                        line-height: 14px;
-                        letter-spacing: 2.36px;
-                    }
-                    &__number {
-                        display: none;
+            &--container {
+
+                .logo {
+                    margin: 0 auto 0 40px;
+                }
+                .line {
+                    display: none;
+                }
+                .glass {
+                    padding: 0 48px;
+                    background-color: rgba(255, 255, 255, 0.08);
+                    backdrop-filter: unset;
+                    &__link {
+                        span {
+                            font-size: 14px;
+                            line-height: 14px;
+                            letter-spacing: 2.36px;
+                        }
+                        &--number {
+                            display: none;
+                        }
                     }
                 }
             }
@@ -158,6 +212,12 @@
 }
 
 @media screen and (max-width: 800px) {
+    .space-mobile-menu {
+        display: none;
+        &.active {
+            display: flex;
+        }
+    }
     .space {
         background: url('../assets/images/home/background-home-mobile.jpg');
         background-repeat: no-repeat;
@@ -178,18 +238,19 @@
             background-size: cover; 
         }
         &__header {
-            &--logo {
-                margin: 0 auto 0 16px;
+            &--container {
+                .logo {
+                    margin: 0 auto 0 16px;
+                }
+                .glass {
+                    display: none;
+                }
+                .menu {
+                    cursor: pointer;
+                    display: flex;
+                    margin: 0 24px 0 0;
+                }
             }
-            &--glass {
-                display: none;
-            }
-            &--menu {
-                display: flex;
-                margin: 0 24px 0 0;
-            }
-        }
-        &__content {
         }
     }
 }
