--- a/src/app/crew/crew/crew.component.scss
+++ b/src/app/crew/crew/crew.component.scss
@@ -2,10 +2,12 @@
 
 .crew {
     display: flex;
-    width: 100vw;
-    height: calc(100vh - 140px);
+    width: 100%;
+    height: 100vh;
     box-sizing: border-box;
-    padding: 0 165px;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 140px 0 0 0;
     justify-content: space-between;
     &__container {
         display: flex;
@@ -61,6 +63,69 @@
         }
         img {
             margin: auto 0 0 0;
+        }
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .crew {
+        padding: 140px 40px 0 40px;
+        flex-direction: column;
+        &__container {
+            width: 100%;
+            margin: 40px auto 0 auto;
+            &--header {
+                margin: 0 0 60px 0;
+                span {
+                    font-size: 20px;
+                    line-height: 20px;
+                }
+                .number {
+                    margin: 0 14px 0 0;
+                    font-size: 20px;
+                    line-height: 20px;
+                }
+            }
+            &--content {
+                display: flex;
+                flex-direction: column;
+                margin: 0 auto;
+                width: 50%;
+            }
+            &--navigation {
+                justify-content: center;
+                margin: 40px 0;
+            }
+            img {
+                width: 50%;
+                margin: 0 auto;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .crew {
+        padding: 140px 16px 0 16px;
+        flex-direction: column;
+        &__container {
+            margin: 24px auto 0 auto;
+            &--header {
+                margin: 0 0 32px 0;
+                span {
+                    font-size: 16px;
+                    line-height: 16px;
+                }
+                .number {
+                    margin: 0 12px 0 0;
+                    font-size: 16px;
+                    line-height: 16px;
+                }
+            }
+            &--navigation {
+                justify-content: center;
+                margin: 32px 0;
+            }
         }
     }
 }
