--- a/src/app/destination/planet/planet.component.scss
+++ b/src/app/destination/planet/planet.component.scss
@@ -6,9 +6,9 @@
     &__container {
         display: flex;
         flex-direction: column;
-        margin: 0 48px;
+        margin: 0 48px 40px 48px;
         &:last-child {
-            margin: 0;
+            margin: 0 0 40px 0;
         }
         &--title {
             font-family: "Bellefair", sans-serif;
