--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,13 +5,14 @@
     max-width: 1440px;
     width: 100vw;
     box-sizing: border-box;
-    padding: 0 0 130px 0;
+    padding: 140px 0;
     justify-content: space-between;
+    height: 100vh;
     &__text {
         display: flex;
         flex-direction: column;
         max-width: 450px;
-        margin: auto 64px 0 0;
+        margin: auto 64px 0 64px;
         &--sub-title {
             font-size: 28px;
             line-height: 28px;
@@ -38,8 +39,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 0 0 0 auto;
         width: 450px;
+        margin: auto 0 0 0;
         &--hover {
             display: flex;
             position: absolute;
@@ -77,14 +78,16 @@
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        padding: 40px;
-        height: calc(100vh - 100px);
+        padding: 140px 40px 40px 40px;
         &__text {
             margin: 0 0 48px 0;
             &--sub-title {
                 font-size: 20px;
                 line-height: 20px;
                 letter-spacing: 3.38px;
+                text-align: center;
+            }
+            &--title {
                 text-align: center;
             }
             &--text {
@@ -94,11 +97,41 @@
             }
         }
         &__button {
+            width: 100%;
+            margin: 0;
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .home {
+        padding: 140px 16px 16px 16px;
+        &__text {
+            margin: 0 0 48px 0;
+            &--sub-title {
+                font-size: 16px;
+                line-height: 16px;
+            }
+            &--title {
+                font-size: 80px;
+                line-height: 80px;
+            }
+            &--text {
+                font-size: 15px;
+                line-height: 25px;
+            }
+        }
+        &__button {
             margin: 0;
             &--hover {
+                width: 300px;
+                height: 300px;
             }
             &--button {
+                width: 150px;
+                height: 150px;
                 span {
+                    font-size: 20px;
                 }
             }
         }
