--- a/src/app/technology/tech/tech.component.scss
+++ b/src/app/technology/tech/tech.component.scss
@@ -35,3 +35,43 @@
         }
     }
 }
+
+@media screen and (max-width: 1440px) {
+    .tech {
+        flex-direction: column;
+        &__container {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin: auto 64px auto 0;
+            &--sub-title {
+                font-size: 16px;
+                line-height: 16px;
+                color: $light-blue;
+                text-transform: uppercase;
+            }
+            &--title {
+                font-size: 56px;
+                line-height: 56px;
+                color: $white;
+                text-transform: uppercase;
+                margin: 12px 0 18px 0;
+            }
+            &--text {
+                font-size: 18px;
+                line-height: 32px;
+                color: $light-blue;
+            }
+        }
+        &__img-container {
+            width: 40%;
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    
+}
